Fix press whitespace

--- a/css/press.scss
+++ b/css/press.scss
@@ -3,10 +3,7 @@
 
 @import 'variables';
 
-.presses {
-}
-
-.press {
+.press-block {
     margin-top: 1em;
     .title {
         display: inline;
